# demo-soap

./: README.md  hello.wsdl  pyproject.toml  tasks.py
soap/: client.py  server.py  wsgi.py
tests/: conftest.py  test_client.py  test_end_to_end.py  test_server.py
